[package]
name = "object-space-parser"
version = "0.1.0"
authors = ["Jeremy Steward <jeremy.steward@tangramvision.com>"]
license = "MIT"
homepage = "https://tangramvision.com"
repository = "https://gitlab.com/tangram-vision-oss/object-space-parser/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
